--- a/octomap_server/package.xml
+++ b/octomap_server/package.xml
@@ -10,7 +10,7 @@
   <url>http://www.ros.org/wiki/octomap_server</url>
   <url type="bugtracker">https://github.com/OctoMap/octomap_mapping/issues</url>
   <url type="repository">https://github.com/OctoMap/octomap_mapping</url>
-  
+
   <export>
     <nodelet plugin="${prefix}/nodelet_plugins.xml" />
   </export>
@@ -26,11 +26,15 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>std_srvs</build_depend>
   <build_depend>octomap</build_depend>
-  <build_depend>octomap_msgs</build_depend>  
+  <build_depend>octomap_msgs</build_depend>
   <build_depend>octomap_ros</build_depend>
   <build_depend>dynamic_reconfigure</build_depend>
   <build_depend>nodelet</build_depend>
   <build_depend>libpcl-all-dev</build_depend>
+  <build_depend>grid_map_msgs</build_depend>
+  <build_depend>grid_map_ros</build_depend>
+  <build_depend>grid_map_cv</build_depend>
+
 
  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>
@@ -46,7 +50,8 @@
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>libpcl-all</run_depend>
- 
+   <run_depend>grid_map_msgs</run_depend>
+  <run_depend>grid_map_ros</run_depend>
+  <run_depend>grid_map_cv</run_depend>
+
 </package>
-
-
